# cczuni

./: Cargo.toml  README.md
.github/workflows/: fmt.yml  test.yml
src/: lib.rs
src/base/: app.rs  client.rs  mod.rs  typing.rs
src/extension/: calendar.json  calendar.rs  mod.rs
src/impls/: client.rs  mod.rs  redirect.rs
src/impls/apps/: mod.rs
src/impls/apps/iccard/: iccard.rs  iccard_constants.rs  iccard_type.rs  mod.rs
src/impls/apps/sso/: jwcas.rs  jwcas_type.rs  lab.rs  mod.rs
src/impls/apps/sso/lan/: lab.rs  mod.rs
src/impls/apps/wechat/: jwqywx.rs  jwqywx_type.rs  mod.rs
src/impls/login/: mod.rs  sso.rs  sso_status.rs  sso_type.rs  webvpn.rs
src/impls/services/: mod.rs  sso_redirect.rs  webvpn.rs  webvpn_type.rs
src/internals/: cookies_io.rs  error.rs  exceptions.rs  fields.rs  mod.rs  recursion.rs  redirect.rs
src/utils/: status.rs
