[package]
name = "cczuni"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = [
    "cookies",
    "multipart", # Support Post a Form
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-recursion = "1"

base64 = "0.22"
scraper = { version = "0.22.0", features = ["atomic"] }
reqwest_cookie_store = "0.8.0"

# webvpn-login
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
rand = { version = "0.8", optional = true }

# calendar
uuid = { version = "1", features = ["v4", "v3"], optional = true }
chrono = { version = "0.4", optional = true }
icalendar = { version = "0.16", optional = true }


[features]
vendored = ["reqwest/native-tls-vendored"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
full = ["webvpn-login", "calendar", "internals", "vendored"]
default = ["full"]
webvpn-login = ["dep:aes", "dep:cbc", "dep:rand"]
calendar = ["dep:chrono", "dep:uuid", "dep:icalendar"]
internals = []
