[package]
name = "cczuni"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "sync",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "cookies",
    "json",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
async-recursion = "1"
anyhow = "1"

base64 = "0.22"
scraper = { version = "0.25.0", default-features = false, features = [
    "atomic",
] }
reqwest_cookie_store = "0.9.0"

# webvpn-login
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
rand = { version = "0.9.2", optional = true }

# calendar
uuid = { version = "1", features = ["v4", "v3"], optional = true }
chrono = { version = "0.4", default-features = false, optional = true }
icalendar = { version = "0.17.5", optional = true }
# lru-client
lru = { version = "0.16.2", optional = true }


[features]
vendored = ["reqwest/native-tls-vendored"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
full = ["webvpn-login", "calendar", "internals", "rustls-tls", "lru-client"]
default = ["full"]
webvpn-login = ["dep:aes", "dep:cbc", "dep:rand"]
calendar = ["dep:chrono", "dep:uuid", "dep:icalendar"]
lru-client = ["dep:lru"]
internals = []
